# docling-convert

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: publish.yml
crates/cloudiful-docling-convert/: Cargo.toml
crates/cloudiful-docling-convert-cli/: Cargo.toml
crates/cloudiful-docling-convert-cli/src/: args.rs  logging.rs  main.rs
crates/cloudiful-docling-convert-web/: Cargo.toml
crates/cloudiful-docling-convert-web/src/: main.rs
crates/cloudiful-docling-convert-web/src/web/: handlers.rs  state.rs  support.rs  task_config.rs  tests.rs
crates/cloudiful-docling-convert-web/src/web/conversion/: file.rs  support.rs  url.rs
crates/cloudiful-docling-convert/src/: conversion.rs  document.rs  facade.rs
crates/cloudiful-docling-convert/src/api/: client.rs  docling.rs  docling_tests.rs  mod.rs  vlm_config.rs
crates/cloudiful-docling-convert/src/document/: input_kind.rs
crates/cloudiful-docling-convert/src/processor/service/: mod.rs  output.rs  tests.rs  text.rs
web/: README.md
web/src/lib/api/: tasks.ts
web/src/lib/components/: FileUploadPanel.svelte  SettingsPanel.svelte
web/src/lib/i18n/: en.json  zh.json
web/src/lib/types/: tasks.ts
