[workspace]
members = [
    "crates/cloudiful-docling-convert",
    "crates/cloudiful-docling-convert-cli",
    "crates/cloudiful-docling-convert-web",
]
resolver = "3"

[workspace.package]
version = "0.2.2"
license = "Apache-2.0"
repository = "https://github.com/cloudiful/cloudiful-docling-convert.git"

[workspace.dependencies]
axum = "0.8.9"
bytes = "1.12"
chrono = "0.4.45"
clap = "4.6"
dirs = "6.0.0"
cloudiful-docling-convert = { path = "crates/cloudiful-docling-convert" }
dotenvy = "0.15"
futures = "0.3.32"
log = "0.4.33"
log4rs = "1.4.0"
lopdf = "0.42.0"
rand = "0.10.1"
reqwest = "0.13.4"
serde = "1.0.228"
serde_json = "1.0.150"
tempfile = "3.27.0"
tokio = "1.52.3"
tokio-util = "0.7.18"
tower = "0.5.3"
tower-http = "0.7.0"
uuid = "1.23.4"
