[package]
name = "cloudiful-docling-convert"
version.workspace = true
edition = "2024"
description = "Core Rust library for Docling-backed document conversion"
license.workspace = true
repository.workspace = true
publish = ["crates-io"]

[dependencies]
bytes.workspace = true
futures.workspace = true
log.workspace = true
lopdf.workspace = true
reqwest = { workspace = true, features = ["json", "multipart"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = [ "full" ] }

[dev-dependencies]
tempfile.workspace = true
